# GeraldsTinyHelper

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  useful_commands.txt
.github/workflows/: ci.yml
include/: memory_pool.h  memory_utils.h
roadmaps/: plan_setup.txt
scripts/: build.bat  build.sh  clean.bat  clean.sh  format.bat  format.sh  install_deps.bat  install_deps.sh  setup.bat  setup.sh  test.bat  test.sh
src/: memory_pool.c  memory_utils.c
tests/: CMakeLists.txt  test_example.c  unity.c  unity.h
